src/main/java/com/example/sync_book/error/IllegalRequestDataException.java
package com.example.sync_book.error;

public class IllegalRequestDataException extends AppException {
    public IllegalRequestDataException(String msg) {
        super(msg);
    }
}